--- a/roles/copyq/templates/copyq.conf
+++ b/roles/copyq/templates/copyq.conf
@@ -15,7 +15,7 @@ itemimage\enabled=false
 itemnotes\enabled=false
 itempinned\enabled=false
 itemsync\enabled=false
-itemtags\enabled=true
+itemtags\enabled=false
 itemtext\enabled=false
 
 [Commands]
