--- a/roles/bin/tasks/main.yml
+++ b/roles/bin/tasks/main.yml
@@ -14,6 +14,6 @@
 - import_tasks: '{{ helpers }}/link.yml'
   vars:
     link_facts:
-      - src: '{{ dotfiles_roles }}/bin/files/bin'
+      - src: '{{ role_path }}/files/bin'
         dest: '{{ user_home }}/bin'
   tags: 'link_bin'
