--- a/helpers/tempfile.yml
+++ b/helpers/tempfile.yml
@@ -1,7 +1,7 @@
 - name: helper | tempfile | create temporary directory
   tempfile:
     state: directory
-    suffix: '{{ tempfile_suffix }}'
+    suffix: '.{{ role_name }}'
   register: tempfile_result
 
 - name: helper | tempfile | get directory path
