--- a/roles/audacity/files/audacity.cfg
+++ b/roles/audacity/files/audacity.cfg
@@ -3,24 +3,32 @@ SelectionFormat=hh:mm:ss + milliseconds
 FrequencySelectionFormatName=Hz
 BandwidthSelectionFormatName=octaves
 [GUI]
+ShowExtraMenus=1
 ShowSplashScreen=0
 Theme=dark
-ShowExtraMenus=1
+TracksFitVerticallyZoomed=1
 [Window]
+Height=800
+Width=1600
 X=100
 Y=100
-Width=1600
-Height=800
 [Version]
 Major=2
-Minor=2
 Micro=1
+Minor=2
 [GUI/ToolBars/Device]
 Dock=0
 Show=0
 [GUI/ToolBars/RecordMeter]
-Show=0
 Dock=0
+Show=0
 [GUI/ToolBars/Transcription]
 Dock=0
 Show=0
+[Warnings]
+CopyOrEditUncompressedDataAsk=0
+DiskSpaceWarning=0
+FirstProjectSave=0
+MixMono=0
+MixStereo=0
+MixUnknownChannels=0
