vscode: add spell checker

--- a/roles/vscode/templates/settings.json
+++ b/roles/vscode/templates/settings.json
@@ -9,6 +9,26 @@
   ],
   "bracketPairColorizer.showHorizontalScopeLine": false,
   "breadcrumbs.enabled": true,
+  "cSpell.allowCompoundWords": true,
+  "cSpell.enabledLanguageIds": [
+    "css",
+    "html",
+    "ignore",
+    "ini",
+    "javascript",
+    "javascriptreact",
+    "json",
+    "jsonc",
+    "markdown",
+    "plaintext",
+    "properties",
+    "python",
+    "scss",
+    "shellscript",
+    "text",
+    "xml",
+    "yaml"
+  ],
   "editor.fontFamily": "{{ user_font }}, monospace",
   "editor.fontLigatures": true,
   "editor.fontSize": 16,
