--- a/roles/vscode/defaults/main.yml
+++ b/roles/vscode/defaults/main.yml
@@ -5,3 +5,4 @@ vscode_extensions:
   - 'esbenp.prettier-vscode'
   - 'joshpeng.sublime-babel-vscode'
   - 'ms-python.python'
+  - 'streetsidesoftware.code-spell-checker'
