optimization: add tag and disable flatpak entry & mpv: add mime association & emacs: add mime association & vscode: update config

--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -39,3 +39,11 @@
     - name: cannot run init file
       debug:
         msg: 'Cannot run init file'
+
+- import_tasks: '{{ helpers }}/mime.yml'
+  vars:
+    mime_facts:
+      entry_name: 'emacs25'
+      type:
+        - 'text/x-emacs-lisp'
+  tags: 'mime_emacs'
