--- a/roles/vscode/templates/settings.json
+++ b/roles/vscode/templates/settings.json
@@ -29,6 +29,7 @@
     "xml",
     "yaml"
   ],
+  "cSpell.userWords": ["repo"],
   "editor.fontFamily": "{{ user_font }}, monospace",
   "editor.fontLigatures": true,
   "editor.fontSize": 16,
