--- a/roles/gnome/defaults/main.yml
+++ b/roles/gnome/defaults/main.yml
@@ -11,6 +11,8 @@ gnome_settings:
     value: 'true'
   - key: '/org/gnome/desktop/interface/monospace-font-name'
     value: "'{{ user_font_monospace }} 12'"
+  - key: '/org/gnome/desktop/interface/document-font-name'
+    value: "'{{ user_font_interface }} 11'"
   - key: '/org/gnome/desktop/privacy/report-technical-problems'
     value: 'false'
   - key: '/org/gnome/online-accounts/whitelisted-providers'
