--- a/roles/mpv/templates/mpv.conf
+++ b/roles/mpv/templates/mpv.conf
@@ -18,7 +18,7 @@ osd-bar-align-y=0.2
 osd-align-x='center'
 osd-align-y='center'
 osd-duration=3000
-osd-font='Roboto'
+osd-font='{{ user_font_interface }}'
 osd-font-size=35
 osd-border-size=1
 osd-color='#BFAB25'
