--- a/roles/git/defaults/main.yml
+++ b/roles/git/defaults/main.yml
@@ -10,12 +10,12 @@ git_config_data:
   - name: difftool.prompt
     value: 'false'
   - name: remote.origin.url
-    value: |
+    value: |-
       {% set git_remote_origin = lookup('pipe', 'git remote get-url origin') %}
       {% if 'https://' in git_remote_origin %}
-        {{ git_remote_origin | replace('https://', 'git@') | replace('/', ':', 1) }}
+        {{- git_remote_origin | replace('https://', 'git@') | replace('/', ':', 1) -}}
       {% else %}
-        {{ git_remote_origin }}
+        {{- git_remote_origin -}}
       {% endif %}
     scope: local
     repo: '{{ playbook_dir }}'
