copyq: delete unused command & gnome_terminal: change cursor pointer & update config for firefox, easytag, keepassxc, simplescreenrecorder

--- a/roles/keepassxc/templates/keepassxc.ini
+++ b/roles/keepassxc/templates/keepassxc.ini
@@ -40,4 +40,6 @@ SplitterState=181, 685
 [security]
 clearclipboard=true
 clearclipboardtimeout=10
+lockdatabaseidle=true
 lockdatabaseidlesec=240
+lockdatabasescreenlock=true
