--- a/roles/easytag/defaults/main.yml
+++ b/roles/easytag/defaults/main.yml
@@ -7,6 +7,8 @@ easytag_settings:
   - key: '/org/gnome/easytag/cddb-manual-search-path'
   - key: '/org/gnome/easytag/confirm-delete-file'
     value: 'false'
+  - key: '/org/gnome/easytag/file-changed-bold'
+    value: 'false'
   - key: '/org/gnome/easytag/fill-default-comment'
   - key: '/org/gnome/easytag/fill-set-default-comment'
     value: 'false'
