--- a/roles/gnome_terminal/defaults/main.yml
+++ b/roles/gnome_terminal/defaults/main.yml
@@ -15,10 +15,12 @@ gnome_terminal_prebuilt_theme:
     value: 'false'
   - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/use-system-font'
     value: 'false'
-  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/font'
-    value: "'{{ user_font_monospace }} 13'"
   - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/bold-color-same-as-fg'
     value: 'true'
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/cursor-shape'
+    value: "'ibeam'"
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/font'
+    value: "'{{ user_font_monospace }} 13'"
   - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/visible-name'
     value: "'{{ item.name }}'"
   - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/background-color'
