synaptic: update config & htop: sort config

--- a/roles/synaptic/files/synaptic.conf
+++ b/roles/synaptic/files/synaptic.conf
@@ -1,41 +1,42 @@
 Synaptic "" {
-  ViewMode "0";
-  showWelcomeDialog "0";
-  ToolbarState "3";
-  ShowAllPkgInfoInMain "true";
-  AskRelated "true";
-  OneClickOnStatusActions "false";
-  delAction "3";
-  upgradeType "-1";
-  undoStackSize "20";
-  UseTerminal "false";
   AskQuitOnProceed "false";
-  useUserFont "0";
-  useUserTerminalFont "0";
+  AskRelated "true";
+  AutoCleanCache "true";
+  availVerColumnPos "4";
+  availVerColumnVisible "1";
+  CleanCache "false";
+  closeZvt "true";
+  componentColumnPos "6";
+  componentColumnVisible "1";
+  delAction "3";
+  delHistory "30";
+  descrColumnPos "9";
+  descrColumnVisible "0";
+  downloadSizeColumnPos "8";
+  downloadSizeColumnVisible "0";
+  instSizeColumnPos "7";
+  instSizeColumnVisible "1";
+  instVerColumnPos "3";
+  instVerColumnVisible "1";
+  LastSearchType "1";
+  Maximized "1";
+  nameColumnPos "2";
+  nameColumnVisible "1";
+  OneClickOnStatusActions "false";
+  sectionColumnPos "5";
+  sectionColumnVisible "1";
+  ShowAllPkgInfoInMain "true";
+  showWelcomeDialog "0";
   statusColumnPos "0";
   statusColumnVisible "1";
   supportedColumnPos "1";
   supportedColumnVisible "1";
-  nameColumnPos "2";
-  nameColumnVisible "1";
-  sectionColumnPos "3";
-  sectionColumnVisible "1";
-  componentColumnPos "4";
-  componentColumnVisible "0";
-  instVerColumnPos "5";
-  instVerColumnVisible "1";
-  availVerColumnPos "6";
-  availVerColumnVisible "1";
-  instSizeColumnPos "7";
-  instSizeColumnVisible "1";
-  downloadSizeColumnPos "8";
-  downloadSizeColumnVisible "0";
-  descrColumnPos "9";
-  descrColumnVisible "0";
+  ToolbarState "3";
+  undoStackSize "20";
+  upgradeType "-1";
   UseStatusColors "true";
-  CleanCache "false";
-  AutoCleanCache "true";
-  delHistory "30";
-  LastSearchType "1";
-  closeZvt "true";
+  UseTerminal "false";
+  useUserFont "0";
+  useUserTerminalFont "0";
+  ViewMode "0";
 };
