change storage path

--- a/vars.yml
+++ b/vars.yml
@@ -8,4 +8,4 @@ user_font: 'Iosevka SS08'
 user_font_interface: 'Roboto'
 user_home: '{{ "$HOME" | expandvars }}'
 user_storage_ext: '/media/{{ ansible_user_id }}/12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10'
-user_storage: '/media/{{ ansible_user_id }}/storage'
+user_storage: '{{ user_home }}/storage'
