keepassxc: update config

--- a/roles/keepassxc/templates/keepassxc.ini
+++ b/roles/keepassxc/templates/keepassxc.ini
@@ -16,6 +16,7 @@ MinimizeOnCopy=false
 OpenPreviousDatabasesOnStartup=true
 RememberLastDatabases=true
 RememberLastKeyFiles=true
+SearchLimitGroup=true
 SingleInstance=true
 SSHAgent=false
 UseAtomicSaves=true
