albert: fix duplicate user_storage directory

--- a/roles/albert/tasks/main.yml
+++ b/roles/albert/tasks/main.yml
@@ -24,6 +24,7 @@
         dest: '{{ user_home }}'
         data:
           - '/*/*/**'
+          - '{{ user_storage | basename }}'
       - src: '.albertignore'
         dest: '{{ user_storage }}'
         data:
