--- a/roles/redshift/tasks/main.yml
+++ b/roles/redshift/tasks/main.yml
@@ -17,5 +17,6 @@
       - exec: 'redshift-gtk'
         name: 'redshift'
         delay: 0
+        icon: 'redshift'
         startup: True
   tags: 'launcher_redshift'
