--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-# __________________________________role:_COMMON__________________________________
+# BEGIN role: COMMON
 *.retry
-# END
+# END role: COMMON
