firefox: fix private option

--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -33,5 +33,5 @@
       - exec: 'firefox'
         name: 'firefox private'
         icon: 'cs-privacy'
-        options: '--private'
+        options: '--private-window'
   tags: 'launcher_firefox'
