--- a/roles/bluetooth/tasks/main.yml
+++ b/roles/bluetooth/tasks/main.yml
@@ -6,11 +6,9 @@
   tags: 'dconf_bluetooth'
 
 - name: set alias
-  command:
+  command: 'bluetoothctl'
   args:
-    argv:
-      - bluetoothctl
-      - system-alias "{{ ansible_date_time.epoch  | hash('md5') }}"
-  async: 5
-  poll: 0
+    stdin: "system-alias {{ ansible_date_time.epoch  | hash('md5') }}"
+  async: 30
+  poll: 3
   tags: 'bluetooth_alias'
