--- a/roles/cinnamon/defaults/main.yml
+++ b/roles/cinnamon/defaults/main.yml
@@ -120,7 +120,7 @@ cinnamon_settings:
   - key: '/org/cinnamon/settings-daemon/peripherals/mouse/motion-acceleration'
     value: '10.0'
   - key: '/org/cinnamon/desktop/session/idle-delay'
-    value: '0'
+    value: 'uint32 0'
   - key: '/org/cinnamon/desktop/screensaver/idle-activation-enabled'
     value: 'false'
   - key: '/org/cinnamon/desktop/screensaver/show-clock'
