emacs: update template task

--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -18,6 +18,8 @@
         dest: '{{ user_home }}/.emacs.d/custom'
       - src: 'ui.el'
         dest: '{{ user_home }}/.emacs.d/custom'
+      - src: 'orgy.el'
+        dest: '{{ user_home }}/.emacs.d/custom'
       - src: 'use_package.el'
         dest: '{{ user_home }}/.emacs.d/custom'
   tags:
