emacs: add org file associations

--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -47,5 +47,6 @@
     mime_facts:
       entry_name: 'emacs25'
       type:
+        - 'text/org'
         - 'text/x-emacs-lisp'
   tags: 'mime_emacs'
