emacs: fix mime type

--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -47,7 +47,7 @@
     mime_facts:
       entry_name: 'emacs25'
       type:
-        - 'text/org'
+        - 'application/org'
         - 'text/x-emacs-lisp'
   tags: 'mime_emacs'
 
