emacs: refactor settings files

--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -14,9 +14,7 @@
     template_facts:
       - src: 'init.el'
         dest: '{{ user_home }}/.emacs.d'
-      - src: 'custom.el'
-        dest: '{{ user_home }}/.emacs.d/custom'
-      - src: 'ui.el'
+      - src: 'settings.el'
         dest: '{{ user_home }}/.emacs.d/custom'
       - src: 'use_package.el'
         dest: '{{ user_home }}/.emacs.d/custom'
