common: change the default pager to most

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -6,6 +6,7 @@
         - 'dconf-editor'
         - 'hunspell-ru'
         - 'hunspell'
+        - 'most'
         - 'tree'
       remove:
         - 'hexchat-common'
