--- a/roles/emacs/tasks/org.yml
+++ b/roles/emacs/tasks/org.yml
@@ -11,4 +11,5 @@
 
 - name: org | update mime database
   command: 'update-mime-database {{ mime_dir | dirname }}'
+  changed_when: False
   tags: 'org_mime_database'
