--- a/roles/hunspell/tasks/main.yml
+++ b/roles/hunspell/tasks/main.yml
@@ -20,6 +20,7 @@
   command: ./configure
   args:
     chdir: '{{ hunspell_dir }}'
+  changed_when: False
 
 - name: build the default target
   make:
