--- a/helpers/key.yml
+++ b/helpers/key.yml
@@ -3,7 +3,7 @@
   apt_key:
     url: '{{ item }}'
   register: apt_key_result
-  until: apt_key_result.failed == false
+  until: not apt_key_result.failed
   retries: 10
   delay: 10
   loop: '{{ key_facts }}'
