fix ansible-lint 206 and 204 issues

--- a/helpers/mime.yml
+++ b/helpers/mime.yml
@@ -17,8 +17,8 @@
     path: '{{ mime_path }}'
     insertafter: '\[{{ item }}\]'
     block: |
-      {% for item in mime_facts.type %}
-        {{- item }}={{ mime_facts.entry_name }}.desktop
+      {% for item in mime_facts.type -%}
+        {{ item }}={{ mime_facts.entry_name }}.desktop
       {% endfor %}
   loop:
     - 'Default Applications'
