pre_commit: remove hardcoded zsh path

--- a/roles/pre_commit/tasks/main.yml
+++ b/roles/pre_commit/tasks/main.yml
@@ -14,7 +14,7 @@
 - name: install pre-commit to git hooks
   shell: source ~/.zshrc && pre-commit install --config .pre-commit-config.yml
   args:
-    executable: /usr/bin/zsh
+    executable: '{{ lookup("pipe", "which zsh") }}'
     chdir: '{{ playbook_dir }}'
   changed_when: False
   tags: 'pre_commit_install'
