--- a/roles/cinnamon/defaults/main.yml
+++ b/roles/cinnamon/defaults/main.yml
@@ -84,9 +84,9 @@ cinnamon_settings:
   - key: '/org/cinnamon/desktop/wm/preferences/theme'
     value: "'Mint-Y-Dark'"
   - key: '/org/cinnamon/desktop/interface/gtk-theme'
-    value: "'Mint-Y-Dark'"
+    value: "'Mint-Y-Dark-Blue'"
   - key: '/org/cinnamon/theme/name'
-    value: "'Mint-Y-Dark'"
+    value: "'Mint-Y-Dark-Blue'"
   - key: '/org/cinnamon/desktop/interface/icon-theme'
     value: "'Mint-Y-Brown'"
   - key: '/org/cinnamon/desktop/interface/first-day-of-week'
